# market-data-aggregator

./: .dockerignore  .env.example  .gitignore  CODEBASE_REPORT.md  Dockerfile  README.md  build_output.txt  docker-compose.yml  init-db.sh  init_data.py  instructions.md  pom.xml  start_app.bat  test-phase9.bat  test-phase9.ps1  test-phases-1-8.ps1  test.py  verify-phase8.ps1  websocket-test-client.html
.github/workflows/: pipeline.yml
analysis-service/: .dockerignore  CMakeLists.txt  Dockerfile
analysis-service/include/: config_loader.hpp  data_structures.hpp  database_manager.hpp  gateway_client.hpp  http_server.hpp
analysis-service/src/: config_loader.cpp  database_manager.cpp  main.cpp
frontend/: app.js  index.html  style.css
secrets/: README.md  api_key.txt  jwt_secret.txt
src/main/java/unitbv/devops/: MarketDataAggregatorApplication.java
src/main/java/unitbv/devops/configuration/: AnalysisServiceHealthIndicator.java  OpenApiConfiguration.java  RestTemplateConfiguration.java  SecretsConfiguration.java  SecurityConfiguration.java  WebConfiguration.java  WebSocketConfiguration.java
src/main/java/unitbv/devops/controller/: AlertController.java  AuthController.java  InternalController.java  MetricsController.java  PriceController.java  SymbolController.java  UserController.java
src/main/java/unitbv/devops/dto/: AlertDTO.java  AnalysisResultDTO.java  AuthResponse.java  LoginRequest.java  LoginResponse.java  MetricsSummaryDTO.java  PriceDTO.java  PriceHistoryDTO.java  RegisterRequest.java  SymbolDTO.java  UserDTO.java
src/main/java/unitbv/devops/entity/: Alert.java  Price.java  Symbol.java  User.java
src/main/java/unitbv/devops/repository/: AlertRepository.java  PriceRepository.java  SymbolRepository.java  UserRepository.java
src/main/java/unitbv/devops/security/: JwtAuthenticationFilter.java  JwtTokenProvider.java
src/main/java/unitbv/devops/service/: AlertService.java  AuthenticationService.java  MetricsService.java  PriceService.java  (+3 more)
src/main/resources/: application-docker.properties  application.properties  logback-spring.xml
src/main/resources/db/migration/: V1__Initial_schema.sql  V2__Seed_data.sql  V3__Add_acknowledged_to_alerts.sql
src/test/java/unitbv/devops/: ApplicationStartupTest.java  AuthenticationTest.java  BusinessLogicTest.java  DataVisualizationTest.java  DatabaseIntegrationTest.java  DatabaseTestBase.java  TestDataConfiguration.java
src/test/resources/: application-test.properties  application.properties
(+4 files in other folders)
